# Terrain_213

./: CMakeLists.txt
lib/: CMakeLists.txt  ScreenAngle.cpp  ScreenAngle.h  conductivity.h  dielectric_permittivity.h  earth_models.cpp  earth_models.h  elevation.h  elevation_reflection_multiplier.cpp  elevation_reflection_multiplier.h  frenel_multiplier.cpp  frenel_multiplier.h  height_determination.cpp  height_determination.h  map.cpp  map.h  model_effective_radius.cpp  model_flat.cpp  model_spheric.cpp  models_earth.h  point.cpp  point.h  reflection_multiplier.cpp  reflection_multiplier.h  reflection_point.cpp  reflection_point.h  screenangle.cpp  screenangle.h  vegetation.h  vegetation_reflection_multiplier.cpp  vegetation_reflection_multiplier.h
main/: CMakeLists.txt  ScreenAngle.cpp  ScreenAngle.h  dinamic_height_determination_tab.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reflection_tab.cpp  rls.cpp  rls.h  rls.ui  stationary_height_determination_tab.cpp  visibility_map_classes.cpp  visibility_map_classes.h  visibility_map_tab.cpp
qcustomplot/: CMakeLists.txt
src/img/: map.qrc
tests/: CMakeLists.txt  main.cpp  test_earth_models.cpp  test_earth_models.h  test_height_determination.cpp  test_height_determination.h  test_map.cpp  test_map.h  test_module.cpp  test_point.cpp  test_point.h  test_reflection_multiplier.cpp  test_reflection_multiplier.h  test_reflection_point.cpp  test_reflection_point.h  test_screening_angle.cpp  test_screening_angle.h
